--- a/VRChat/94/982194.html
+++ b/VRChat/94/982194.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Ka0V8hfUmGj7MwbKy1T2/QPsL+5oABaDkpnEVcsO3Kc="></script>
+    "l9tHNmc+Cqoqy9zyIpJfd1vv9LeoS+RLPKXOzFmJ1Yg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"すやすやVRすいみんアイマスク","description":"＊モデル説明＊ \nかわいいアイマスクを2種類つくりました！\nVR睡眠をしている方に向けたVRChat用アクセサリーとなります。\nアイマスクをアバターが付けていることによって、睡眠中かどうか区別が付けやすくなります。\n（そして、睡眠中もかわいくおしゃれアピールできますよ！）\n\nすやすやにゃんにゃん、すやすやうさちゃん、お好みでご利用ください＊*\n\n＊内容物＊\nKawaii_eyemasks.fbx\nモデルデータが入っています。\n\nTexture.png\nテクスチャとなります。\n\n ＊利用規約＊ \n本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。 本データはVRChatでの利用を想定しております。VRChat以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。再配布、自作発言、名誉棄損・法律に反する使用はご遠慮ください。本データの著作権は作成者(姉と妹)が有します。 ","url":"https://booth.pm/ja/items/982194","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/982194/0fb32da1-0a12-4a08-9587-0fe4182a2dc3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ka0V8hfUmGj7MwbKy1T2/QPsL+5oABaDkpnEVcsO3Kc="></script>
+    nonce="l9tHNmc+Cqoqy9zyIpJfd1vv9LeoS+RLPKXOzFmJ1Yg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -395,9 +395,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
