--- a/VRChat/25/980725.html
+++ b/VRChat/25/980725.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "No7DtN0ZInTwn+Vy7zZxN7rikPx/1OQTEUTdPzEl/1A="></script>
+    "r+Puyj9+gjW5QxeCrGiPXiZj8ZeOB1mLiXraVd6LBeE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カタリネ(Catarine)","description":"8本足のスキュラメイドのCatarineです。\n\n【利用規約】\n本モデルを使用する場合、本利用規約・免責事項を読み、同意したとみなします。\n無改変の再配布は禁止します。\n改変を認めます。\nR－１８・グロに対する使用を認めます。\nゲーム・映像・Vtuber・その他自作創作物に使用することを認めます。\n\n【免責事項】　\n本モデルを使用したことによる損害・不利益に対して作者はいかなる責任も負いません。\n利用規約は事前の予告なく変更される場合があります\n本モデルの配布は事前の予告なく終了する場合がございます。\nボーンがhumanoidの設定に反応していない時がございますVRChatwiki(http://vrchatjp.playing.wiki/)を参照して各自設定してください。\n\n※ダイナミックボーンは付属しません\n\n内容\n・モデルデータ（.fbx)\n・blenderデータ(.blend)\n・テクスチャ(.png)\n・利用規約(.txt)\n・Unitypackage","url":"https://booth.pm/ja/items/980725","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/29d3fb48-b17c-40f3-9f9a-dea621d4a8d0/i/980725/e2961156-a5de-44c3-9535-d7285875b75e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="No7DtN0ZInTwn+Vy7zZxN7rikPx/1OQTEUTdPzEl/1A="></script>
+    nonce="r+Puyj9+gjW5QxeCrGiPXiZj8ZeOB1mLiXraVd6LBeE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -413,9 +413,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
