--- a/VRChat/55/980455.html
+++ b/VRChat/55/980455.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "50PP6qO4/9rbR5k69rMbzdmDsXuUurjFJMBQ0TV9a1k="></script>
+    "3ZJNml6BTxlJm50DgN/EXsbxFlxNLkyMcMdnpFUDIPE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Forge（鍛冶場炉）","description":"8/26 バーチャルマーケットに向けて制作した鍛冶場炉です。\n\n…完成後、色々と不具合が発生したため、まずは無料版として配布します。\n\n今後、不具合を解消、正式に完成させた場合は有料版として新商品として発売します。","url":"https://booth.pm/ja/items/980455","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/980455/46014780-c1b3-4c9d-9b08-aef817e6c001_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="50PP6qO4/9rbR5k69rMbzdmDsXuUurjFJMBQ0TV9a1k="></script>
+    nonce="3ZJNml6BTxlJm50DgN/EXsbxFlxNLkyMcMdnpFUDIPE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -386,9 +386,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
