--- a/VRChat/33/979333.html
+++ b/VRChat/33/979333.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XXmFEUa35GdXe40EY+m3q60lAgdnQybdRmhahywhF7g="></script>
+    "ZsPDqsk8q87bZRQTDv8bQc099z6WDaryrOYnutbvqR4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペーパーヘッドギア","description":"私がVRChatで使用してるアバターのヘッドギアを、一般的な3Dモデルに付けられるよう形を整えたものです。さらに剣の柄に変形できるギミックを加えました。\n\n刀身まで含めて設定済みのデータを入れているので、ヘッドギア／剣どちらの状態でもすぐにお使いいただけます。\n\n使用に関しては特に禁止事項を設けていません。\n購入後はご自由にお使いください。","url":"https://booth.pm/ja/items/979333","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/1e917239-eb4f-44e6-8fa0-efcfc40c090b/i/979333/ae57bf38-7aa5-438a-a324-f5b5f7edd16c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XXmFEUa35GdXe40EY+m3q60lAgdnQybdRmhahywhF7g="></script>
+    nonce="ZsPDqsk8q87bZRQTDv8bQc099z6WDaryrOYnutbvqR4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
