--- a/VRChat/71/956571.html
+++ b/VRChat/71/956571.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "poeSNKmCq9IU1F+mo6Ldh0RweccETyTe30wmL6dTQW4="></script>
+    "D/9fATgb5LoO30ccVf7tbZd0w54W3g6Gkf4VSOb1zgM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"イカ焼きの屋台【3D素材】","description":"【イカ焼き屋の屋台1.1】\n・内容\n　イカ焼き.fbx\n　イカ焼き.png\n\n　マテリアル数1\n　ポリゴン数2326\n\n\n・紹介\n　シンプルなイカ焼きの屋台です。ゲーム素材にしてもOK、VRChatのワールドに設置してもOK、アバターに仕込んで移動屋台になってもOK、改変してたこ焼き屋にしてもOKの3D素材です。\n※イカは付属しません。別途ご用意ください。\n\n・1.1追加小物\n　扇風機、電球、秘伝のタレを追加しました。\n\n【利用規約】\n・3Dモデルをヘイトスピーチや他者への嫌がらせ等での使用を禁止します。\n・3Dモデルを使用したことにより発生したトラブル、損失等の責任は一切負いません。\n・営利目的での再配布を禁止します。\n\n・上記3項目に接触しなければ何をやっても良いです。\n・使用の際にクレジットの表記は必要ありません。\n","url":"https://booth.pm/ja/items/956571","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/956571/e19ff7c5-ff80-40a7-86e8-d5a3b3ebd35c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="poeSNKmCq9IU1F+mo6Ldh0RweccETyTe30wmL6dTQW4="></script>
+    nonce="D/9fATgb5LoO30ccVf7tbZd0w54W3g6Gkf4VSOb1zgM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      98
+                                      99
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      98
+                                      99
                                     </div>
                                   </div></a>
                                 </div>
@@ -404,9 +404,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
